Added content changes

--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -189,14 +189,12 @@
             </div>
             <div class="icon-title-container">
               <h6>
-                Supercharged NFT
-                Reads
+                NFT Indexing & Caching
               </h6>
             </div>
             <div class="subtitle-container">
               <p>
-                All your NFTs are cached by default for superior UX and stored
-                in a DB for those complex business queries.
+                NFT reads are stored and cached by default for complex business queries and superior user experience.
               </p>
             </div>
           </div>
@@ -211,12 +209,11 @@
               />
             </div>
             <div class="icon-title-container">
-              <h6>Decentralized Storage Simplified</h6>
+              <h6>Queryable NFT Data</h6>
             </div>
             <div class="subtitle-container">
               <p>
-                Automatically creates blockchain-specific metadata and uploads
-                it to IPFS/arweave. Also copying it to CDNs for instant access.
+                Search, filter, and paginate the NFTs according to their attributes or metadata in real time, using SHYFT APIs.
               </p>
             </div>
           </div>
@@ -232,13 +229,12 @@
             </div>
             <div class="icon-title-container">
               <h6>
-                CRUD<br />
-                on NFT
+                NFT Marketplace
               </h6>
             </div>
             <div class="subtitle-container">
               <p>
-                Automate complex operations with our dead simple crud/NFT apis.
+                Shyft provides an entire range of Marketplace APIs for all the operations required to run a marketplace within minutes. Zero maintenance, minimal coding.
               </p>
             </div>
           </div>
@@ -255,12 +251,11 @@
               />
             </div>
             <div class="icon-title-container">
-              <h6>Web3 Infra</h6>
+              <h6>Anything Into NFT</h6>
             </div>
             <div class="subtitle-container">
               <p>
-                All your API calls are routed through private RPC nodes with
-                generous rate limits.
+                Art can be in any form, such as music, writings, poetry or drawings. With SHYFT APIs, you can convert any content, be it Audio, PNGs, media, or even PDFs into an NFT.
               </p>
             </div>
           </div>
@@ -275,12 +270,11 @@
               />
             </div>
             <div class="icon-title-container">
-              <h6>Dashboard</h6>
+              <h6>Semi-Custodial Wallets</h6>
             </div>
             <div class="subtitle-container">
               <p>
-                Project dashboard to create, show, update and delete your NFTs
-                with detailed analytics and transaction history.
+                A type of wallet where we hold half of your private key and the other half is with you, adding an extra layer of security, as the keys are not stored at one location without compromising the convenience of accessing your wallet.
               </p>
             </div>
           </div>
@@ -299,8 +293,7 @@
             </div>
             <div class="subtitle-container">
               <p>
-                Mint/Burn APIs for your project’s fungible token, with custom
-                distribution logic among wallets.
+                Mint/Burn APIs for your project’s fungible token, with custom distribution logic among wallets.
               </p>
             </div>
           </div>
@@ -364,7 +357,7 @@
 <div class="support-chain-background">
   
   <div class="container-lg">
-    <div class="row">
+    <div class="row things-with-shyft">
       <div class="col-sm-10">
         <h3 class="section-sub-heading">
           Some of The Things You Can Build With Shyft APIs
@@ -379,8 +372,8 @@
                   <div class="tag-img">
                       <img src="assets/images/dark-assets/online-nft-marketplace.png" alt="Integrate" />
                   </div>
-                  <h3>Integrate in Minutes</h3>
-                  <p class='p-para-2 pt-2'>A few calls and a couple of lines of code are good to take your product to Market and scale without hassle.</p>
+                  <h3>NFT Marketplace</h3>
+                  <p class='p-para-2 pt-2'>Build your own NFT Marketplace like Opensea/Magiceden or build in app marketplace like Stepn. Everything is easy to build and scale! To make one get in touch with us.</p>
               </div>
           </div>
       </div>
@@ -390,8 +383,8 @@
                   <div class="tag-img">
                       <img src="assets/images/dark-assets/crud-nft.png" alt="API" />
                   </div>
-                  <h3>Superfast APIs</h3>
-                  <p class='p-para-2 pt-2'>We index and cache images and metadata, so your users can get the NFTs they demand in an instant. Build seamless interfaces to allow users to browse, buy and sell NFTs using APIs.</p>
+                  <h3>CRUD</h3>
+                  <p class='p-para-2 pt-2'>Automate complex operations with our dead simple crud/NFT apis.</p>
               </div>
           </div>
       </div>
@@ -402,7 +395,7 @@
                       <img src="assets/images/dark-assets/nft-access-tokens.png" alt="Transparent" />
                   </div>
                   <h3>Real-time Stats</h3>
-                  <p class='p-para-2 pt-2'>We give you stats like a collection's floor prices, average price, total traded volume, popular collections, and many more, and that too in real-time.</p>
+                  <p class='p-para-2 pt-2'>The authentication system is not dependent on any single central database. Increased security, with 0% chance of data leakage, as data is stored on-chain.</p>
               </div>
           </div>
       </div>
@@ -413,7 +406,7 @@
 
   <div id="the_pricing" class="container-fluid our-pricing-section">
     <div class="container-lg">
-      <div class="row">
+      <div class="row pricing-top">
         <div class="col-sm-10">
           <h3 class="section-sub-heading">Our Pricing</h3>
         </div>
@@ -712,15 +705,16 @@
 </div>
 <div class="calendly-popup-widget" data-auto-load="false"></div>
 
-<div class="chat-outer" (click)="talkToAnExpert()">
-  <!-- <img class="img-fluid pc-img" src="assets/images/Icons/chat_2.svg" alt="" /> -->
+<!-- <div class="chat-outer" >
+  <img class="img-fluid pc-img" src="assets/images/Icons/chat_2.svg" alt="" />
   <h4 class="pc-text">Book A Demo</h4>
   <div class="row mob-img">
     <div class="col-12 chat-text text-center">Book A Demo</div>
-    <!-- <div class="col-2">
+    <div class="col-2">
       <img class="img-fluid" src="assets/images/Icons/mobile-chat.svg" alt="" />
-    </div> -->
+    </div>
   </div>
-</div>
+</div> -->
+<button class="book-demo" (click)="talkToAnExpert()"></button>
 
 <app-footer></app-footer>
