Headers and footer

--- a/src/app/modules/shared/components/dark-footer/dark-footer.component.html
+++ b/src/app/modules/shared/components/dark-footer/dark-footer.component.html
@@ -1,1 +1,62 @@
-<p>dark-footer works!</p>
+<div class="container-fluid bg-darker">
+    <div class="container footer-2" style="padding: 30px 0px">
+      <div class="row">
+        <div class="col-sm-12 col-md-6 text-center text-sm-center text-md-start">
+          <div class="footer-text-container">
+            <div class="pt-3">
+              <h3 class="footer-logo">
+                <img src="assets/images/dark-assets/shyft-logo.svg" alt="" />
+              </h3>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 text-center text-sm-center text-md-end">
+          <div>
+            <div
+              class="text-center text-sm-center text-md-end pt-3"
+              style="width: 100%"
+            >
+              <span>
+                <span class="footer-icons"
+                  ><a href="https://github.com/Shyft-to" target="_blank"
+                    ><img
+                      src="assets/images/Icons/small-github.svg"
+                      alt="Gmail" /></a
+                ></span>
+                <span class="footer-icons"
+                  ><a href="https://twitter.com/shyft_to" target="_blank"
+                    ><img
+                      src="assets/images/Icons/small-twitter.svg"
+                      alt="Twitter" /></a
+                ></span>
+                <span class="footer-icons"
+                  ><a href="https://discord.gg/8JyZCjRPmr" target="_blank"
+                    ><img
+                      src="assets/images/Icons/small-discord.svg"
+                      alt="Discord" /></a
+                ></span>
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row d-flex justify-content-center cstm-footer-links">
+        <div class="col-12 col-sm-12 col-lg-4 text-center text-lg-start">
+          <div class="footer-dark-link-container">
+            <a href="mailto:team@shyft.to">Contact: team@shyft.to</a>
+          </div>
+        </div>
+        <div class="col-12 col-sm-12 col-lg-4 text-center">
+          <div class="footer-dark-link-container">
+            <a href="https://docs.shyft.to" target="_blank">Documentation</a>
+          </div>
+        </div>
+        <div class="col-12 col-sm-12 col-lg-4 text-center text-lg-end">
+          <div class="footer-dark-link-container">
+            <a routerLink="/terms">Terms & Conditions</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
