--- a/src/app/modules/shared/components/dark-header/dark-header.component.html
+++ b/src/app/modules/shared/components/dark-header/dark-header.component.html
@@ -1,1 +1,49 @@
-<p>dark-header works!</p>
+
+<!-- <app-side-nav
+  [isSidenavActive]="isSidenavActive"
+  [isAuthenticated]="isAuthenticated"
+  [isMenuActive]="isMenuActive"
+></app-side-nav>
+<nav class="navbar navbar-expand fixed-top our-navbar-dark">
+  <div class="container-fluid contained-nav">
+  
+    <a class="navbar-brand me-2" routerLink="/"
+      ><img src="assets/images/dark-assets/shyft-logo.svg" style="width: 80px" alt="Shyft"
+    /></a>
+    
+
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-mdb-toggle="collapse"
+      data-mdb-target="#navbarButtonsExample"
+      aria-controls="navbarButtonsExample"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <i class="fas fa-bars"></i>
+    </button>
+    
+    <div class="collapse navbar-collapse" id="navbarButtonsExample">
+      <ul class="navbar-nav mb-2 mb-lg-0"></ul>
+
+      <div class="d-flex align-items-center custom-nav-links">
+        <a type="button" class="btn btn-link px-3 me-2" href="https://api.shyft.to/sol/api/explore" target="_blank"> APIs </a>
+        
+        <a type="button" class="btn btn-link px-3 me-2" href="https://www.getpostman.com/collections/eb766924a309c10d6d7e" target="_blank"> Import Postman </a>
+        <a type="button" class="btn btn-link px-3 me-2" href="https://docs.shyft.to" target="_blank"> Docs </a>
+        <button
+          id="side-panel"
+          [ngStyle]="{
+            display: isDashboardUrl && isMenuActive ? 'block' : 'none'
+          }"
+          type="button"
+          class="btn btn-primary me-3"
+          (click)="openSidenav()"
+        >
+          &#9776;
+        </button>
+      </div>
+    </div>
+  </div>
+</nav> -->
