--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -6,12 +6,11 @@
         <div class="hero-text-box">
           <h1 class="text-uppercase hero-heading gradient-text-hero">shyft</h1>
           <h3 class="hero-sub-heading">
-            APIs For Frictionless NFT integration
+            Simplified Web3 Development on Solana
           </h3>
           <div class="hero-padded-section">
             <p class="p-para-normal">
-              Build your web3.0 products using our NFT CRUD APIs in days, not
-              months and manage them using our intuitive dashboard
+              Zero maintenance, low-code APIs to build scalable dApps on Solana. Create your own dApp(s) or migrate your existing applications from web2.0 to web3.0 in minutes.
             </p>
           </div>
           <div class="hero-button-container">
@@ -111,12 +110,12 @@
             <div class="card-body">
               <div class="title-container">
                 <h4 class="card-title text-center">
-                  Blockchain stack is still nascent and complex
+                  Blockchain development stack is complex
                 </h4>
               </div>
 
               <p class="card-text text-center">
-                Launching a scalable NFT app involves multiple moving parts in on-chain and off-chain logic, with rapidly changing protocols and documentation.
+                Launching scalable and usable dApps requires developing multiple on-chain and off-chains systems,with rapidly changing dependencies.
               </p>
             </div>
           </div>
@@ -137,7 +136,7 @@
               </div>
 
               <p class="card-text text-center">
-                This usually requires a team of highly skilled and diverse developers, increasing the development cost by a huge margin.
+                This usually requires a team of highly skilled and diverse developers, increasing the development cost by huge margin.
               </p>
             </div>
           </div>
@@ -194,7 +193,7 @@
             </div>
             <div class="subtitle-container">
               <p>
-                NFT reads are stored and cached by default for complex business queries and superior user experience.
+                NFTs are stored and cached by default for complex business queries and superior user experience.
               </p>
             </div>
           </div>
@@ -213,7 +212,7 @@
             </div>
             <div class="subtitle-container">
               <p>
-                Search, filter, and paginate the NFTs according to their attributes or metadata in real time, using SHYFT APIs.
+                Search and filter the NFTs according to their attributes, metadata & creators in real time.
               </p>
             </div>
           </div>
@@ -234,7 +233,7 @@
             </div>
             <div class="subtitle-container">
               <p>
-                Shyft provides an entire range of Marketplace APIs for all the operations required to run a marketplace within minutes. Zero maintenance, minimal coding.
+                REST APIs to create a fully functional in-app marketplace. Low code, zero maintenance.
               </p>
             </div>
           </div>
@@ -255,7 +254,7 @@
             </div>
             <div class="subtitle-container">
               <p>
-                Art can be in any form, such as music, writings, poetry or drawings. With SHYFT APIs, you can convert any content, be it Audio, PNGs, media, or even PDFs into an NFT.
+                Convert any content, be it Audio, PNGs, media, or even PDFs into an NFT with just one API call.
               </p>
             </div>
           </div>
@@ -274,7 +273,7 @@
             </div>
             <div class="subtitle-container">
               <p>
-                A type of wallet where we hold half of your private key and the other half is with you, adding an extra layer of security, as the keys are not stored at one location without compromising the convenience of accessing your wallet.
+                A secure wallet to quickly on-board non native crypto users, by providing them them a password to authorise the transactions.
               </p>
             </div>
           </div>
@@ -293,7 +292,7 @@
             </div>
             <div class="subtitle-container">
               <p>
-                Mint/Burn APIs for your project’s fungible token, with custom distribution logic among wallets.
+                Mint/Burn/Transfer Fungible tokens and program your system’s tokenomics.
               </p>
             </div>
           </div>
@@ -356,7 +355,7 @@
 
 <div class="support-chain-background">
   
-  <div class="container-lg">
+  <!-- <div class="container-lg">
     <div class="row things-with-shyft">
       <div class="col-sm-10">
         <h3 class="section-sub-heading">
@@ -394,7 +393,7 @@
                   <div class="tag-img">
                       <img src="assets/images/dark-assets/nft-access-tokens.png" alt="Transparent" />
                   </div>
-                  <h3>Real-time Stats</h3>
+                  <h3>NFT as access token</h3>
                   <p class='p-para-2 pt-2'>The authentication system is not dependent on any single central database. Increased security, with 0% chance of data leakage, as data is stored on-chain.</p>
               </div>
           </div>
@@ -402,7 +401,7 @@
         
   </div>
 
-  </div>
+  </div> -->
 
   <div id="the_pricing" class="container-fluid our-pricing-section">
     <div class="container-lg">
@@ -429,7 +428,7 @@
                         <img src="assets/images/dark-assets/Vector-ticks.svg" alt="" />
                       </div>
                       <div class="col-10 text-start pt-1">
-                        <h6>Handle scaling on your own</h6>
+                        <h6>20k API request/day</h6>
                       </div>
                     </div>
                     <div class="row icon-list d-flex align-items-center">
@@ -437,7 +436,7 @@
                         <img src="assets/images/dark-assets/Vector-ticks.svg" alt="" />
                       </div>
                       <div class="col-10 text-start pt-1">
-                        <h6>Public RPC nodes</h6>
+                        <h6>Shared Private RPC nodes</h6>
                       </div>
                     </div>
                     <div class="row icon-list d-flex align-items-center">
@@ -453,7 +452,7 @@
                         <img src="assets/images/dark-assets/Vector-ticks.svg" alt="" />
                       </div>
                       <div class="col-10 text-start pt-1">
-                        <h6>Deploy and scale your own</h6>
+                        <h6>Get access to all APIs services</h6>
                       </div>
                     </div>
                     <div class="row icon-list d-flex align-items-center">
@@ -469,9 +468,17 @@
                         <img src="assets/images/dark-assets/Vector-ticks.svg" alt="" />
                       </div>
                       <div class="col-10 text-start pt-1">
-                        <h6>Hobbyist</h6>
+                        <h6>Get dev-support in Discord</h6>
                       </div>
                     </div>
+                    <!-- <div class="row icon-list d-flex align-items-center">
+                      <div class="col-2">
+                        <img src="assets/images/dark-assets/Vector-ticks.svg" alt="" />
+                      </div>
+                      <div class="col-10 text-start pt-1">
+                        <h6>Hobbyist</h6>
+                      </div>
+                    </div> -->
                   </div>
                 </div>
                 <div
@@ -601,7 +608,7 @@
                   <div class="icon1-list-container">
                     <div class="row icon-list d-flex align-items-center pt-3">
                       <h6 class="custom-h6 text-start">
-                        NFT products time to go-to-market is very crucial. Shyft
+                        Shyft
                         helps you to launch faster with minimum resources. We
                         are here to help you to grow fast by building solutions
                         for your custom needs. We are just one click away!
@@ -659,7 +666,7 @@
                 >Join community</a
               >
             </div>
-            <p class="p-para-discord text-center text-md-start text-light">
+            <!-- <p class="p-para-discord text-center text-md-start text-light">
               Show some love on our social handles...Follow us
             </p>
             <div class="text-center text-md-start">
@@ -675,9 +682,9 @@
                     src="assets/images/Icons/github.svg"
                     alt="shyft_github" /></a
               ></span>
-            </div>
-            <p class="p-para-discord text-center text-md-start text-light">
-              Discuss your project’s NFT requirements.
+            </div> -->
+            <p class="p-para-discord text-center text-md-start text-light pt-5">
+              Discuss your dApp's requirements.
             </p>
             <div class="text-center text-md-start">
               <button class="btn-solid-reg fixed-width-new">
