Fixed text color

--- a/src/app/modules/authentication/components/create-nft-page/create-nft-page.component.html
+++ b/src/app/modules/authentication/components/create-nft-page/create-nft-page.component.html
@@ -302,26 +302,26 @@
 
     <div class="row mt-5">
       <div class="col-md-12 col-lg-5">
-        <p class="p-para-normal">
+        <p class="p-para-normal text-green-blue-22">
           <strong class="p-para">POST</strong>
           https://api.shyft.to/sol/v1/nft/create
         </p>
 
-        <p class="p-para-normal">
+        <p class="p-para-normal text-green-blue-22">
           You can turn anything into an NFT in less than 2 minutes using one
           simple API call. If you are new to minting, see Easy minting
           quickstart.
         </p>
 
-        <p class="p-para-normal">
+        <p class="p-para-normal text-green-blue-22">
           After minting, the NFT will appear in the mint_to_address wallet. If
           you minted to your own wallet.
         </p>
-        <p class="p-para-normal">
+        <p class="p-para-normal text-green-blue-22">
           You can mint up to 100 NFTs for free per chain. Maximum supported file
           size is 20MB.
         </p>
-        <p class="p-para-normal">
+        <p class="p-para-normal text-green-blue-22">
           <strong>Useful for:</strong>
           For turning anything into an NFT effortlessly. For all the benefits,
           see Your New Minting Superpowers.
