--- a/src/app/modules/authentication/components/read-nft-page/read-nft-page.component.html
+++ b/src/app/modules/authentication/components/read-nft-page/read-nft-page.component.html
@@ -54,7 +54,7 @@
           <h5 class="edit-medium-headings">Token ID: {{ tokenId }}</h5>
 
           <p class="p-para">Title</p>
-          <p class="p-para-normal">
+          <p class="p-para-normal text-green-blue-22">
             {{ title }}
           </p>
           <div class="pt-2 pb-3">
@@ -66,15 +66,15 @@
               <p class="p-para">Blockchain</p>
             </div>
             <div class="col">
-              <p class="p-para-normal">Etherium</p>
+              <p class="p-para-normal text-green-blue-22">Etherium</p>
             </div>
           </div>
           <p class="p-para">Mint - to - Address</p>
-          <p class="p-para-normal">
+          <p class="p-para-normal text-green-blue-22">
             {{ mintToAddress }}
           </p>
           <p class="p-para">Meta Data</p>
-          <p class="p-para-normal">
+          <p class="p-para-normal text-green-blue-22">
             {{ nftURI }}
           </p>
         </div>
