--- a/src/app/modules/authentication/components/solana-create-nft-page/solana-create-nft-page.component.html
+++ b/src/app/modules/authentication/components/solana-create-nft-page/solana-create-nft-page.component.html
@@ -119,7 +119,7 @@
       <div class="modal-body pb-5">
         <h3 class="modal-heads">Yayy!!! You NFT is created!!</h3>
         <h3 class="modal-heads">CHECK YOUR WALLET</h3>
-        <p class="p-para-normal">
+        <p class="p-para-normal text-green-blue-22">
           Also, you can check <a routerLink="/dashboard/list-nft">here</a>.
         </p>
       </div>
