--- a/src/app/modules/static/components/get-api-page/get-api-page.component.html
+++ b/src/app/modules/static/components/get-api-page/get-api-page.component.html
@@ -37,8 +37,8 @@
                 Continue
               </button>
             </div>
-            <p class="p-para-normal">
-              By signing up, I agree to Shift’s <a><b>Terms of Use</b></a> and
+            <p class="p-para-normal text-green-blue-22">
+              By signing up, I agree to Shyft’s <a><b>Terms of Use</b></a> and
               <a><b>Privacy Policy</b></a>
             </p>
           </form>
@@ -80,7 +80,7 @@
       <div class="modal-body pb-5">
         <h3 class="modal-heads">Yayy!!! All Set to Create NFTS</h3>
         <h3 class="modal-heads">CHECK YOUR EMAIL!</h3>
-        <p class="p-para-normal">
+        <p class="p-para-normal text-green-blue-22">
           We sent the API key to your registered email address.
         </p>
       </div>
