some issues resolved

--- a/src/app/modules/shared/components/dark-header/dark-header.component.html
+++ b/src/app/modules/shared/components/dark-header/dark-header.component.html
@@ -1,5 +1,4 @@
-
-<!-- <app-side-nav
+<app-side-nav
   [isSidenavActive]="isSidenavActive"
   [isAuthenticated]="isAuthenticated"
   [isMenuActive]="isMenuActive"
@@ -46,4 +45,4 @@
       </div>
     </div>
   </div>
-</nav> -->
+</nav>
