--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-dark-header></app-dark-header>
 <div class="container-fluid hero-section">
   <div class="container-lg pt-1 pb-3">
     <div class="row">
@@ -724,4 +724,4 @@
 </div> -->
 <button class="book-demo" (click)="talkToAnExpert()"></button>
 
-<app-footer></app-footer>
+<app-dark-footer></app-dark-footer>
